# musicprogram

./: Cargo.toml  LICENSE  style.css
src/: main.rs
src/audio/: bitset.rs  error.rs  mod.rs
src/audio/engine/: mod.rs  nodes.rs  stack.rs
src/audio/engine/nodes/: port.rs
src/engine/: bitset.rs  mod.rs  stack.rs
src/engine/stack/: mod.rs  nodes.rs
src/ui/: mod.rs  modals.rs  model.rs  node_list.rs  spinner.rs  stack.rs
src/ui/views/: mod.rs  modals.rs  node.rs  node_list.rs
