[package]
name = "musicprogram"
version = "0.1.0"
authors = ["Filip Szczepański <jazz2rulez@gmail.com>"]
edition = "2018"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
cursive = "0.16.3"
enum-kinds = "0.5.1"
jack = "0.7.1"
rtrb = "0.2.0"
wmidi = "4.0.6"
