[package]
name = "musicprogram"
version = "0.1.0"
authors = ["Filip Szczepański <jazz2rulez@gmail.com>"]
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
enum-kinds = "0.5.1"
jack = "0.9.1"
rtrb = "0.2.1"
wmidi = "4.0.6"
vizia = { git = "https://github.com/vizia/vizia" }
basedrop = "0.1.2"
enum-iterator = "0.7.0"
